# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: github-actions-project3.yml
page_loader/: __init__.py
page_loader/build_path/: get_content.py  get_files.py  get_images.py  loader.py  myexception.py  page_loader.py  path_builder.py  path_dir.py  path_file.py  update_html.py  update_img_urls.py
page_loader/scripts/: load_page.py
tests/: test_page_loader.py  test_path_builder.py
tests/fixtures/: origin.html  result1.html  wrong_url.html
