[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["NNbaur <studentsoftpu@gmail.com>"]
packages = [
    {include = "page_loader"},
]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
requests = "^2.25.1"
beautifulsoup4 = "^4.8.2"
progress = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
requests = "^2.25.1"
beautifulsoup4 = "^4.8.2"
progress = "^1.6"
requests_mock = "^1.8.0"

[tool.poetry.scripts]
page-loader = 'page_loader.scripts.load_page:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
